--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@
     padding: 0;
 }
 
+body{
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: #ffffff;
+    color: #1d1d1f;
+}
+
 .steam-game img
 {
     width: 200px;
@@ -13,7 +19,6 @@
 header
 {
     color: white;
-    background-color: rgb(60, 60, 110);
     padding: 50px;
     text-align: center;
 }
@@ -23,13 +28,11 @@ main
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-color: rgb(46, 46, 83);
 }
 
 footer
 {
     color: white;
-    background-color: rgb(60, 60, 110);
     text-align: center;
     height: 20px;
     position: fixed;
@@ -50,7 +53,6 @@ footer
     header
     {
         color: white;
-        background-color: grey;
         height: 100px;
         text-align: center;
         padding: 30px;
@@ -61,13 +63,11 @@ footer
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: repeat(5, 1fr);
-        background-color: rgb(143, 143, 143);
     }
 
     footer
     {
         color: white;
-        background-color: rgb(113, 113, 113);
         text-align: center;
         position: fixed;
         bottom: 0px;
